# 6502_Emulator

./: CMakeLists.txt  cmake.txt
6502/6502Test/src/: main_6502.cpp
6502Lib/: CMakeLists.txt
6502Lib/src/: class_6502.h  execute.h  execute_6502.h  m6502.h  main_6502.h  testclass.h
6502Test/: CMakeLists.txt
6502Test/src/: main_6502.cpp  tests_6502.cpp
